samples/_failures_safe/1761619067_505462_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0771a6f6.c: In function ‘print_state’:
./samples/SAFE/__tmp_0771a6f6.c:150:9: error: expected expression at end of input
  150 |         printf("Current state: %s\n",
      |         ^~~~~~
./samples/SAFE/__tmp_0771a6f6.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0771a6f6.c:150:9: error: expected declaration or statement at end of input
